@@ -1,5 +1,5 @@
 Package: rgl
-Version: 0.92.918
+Version: 0.92.919
 Title: 3D visualization device system (OpenGL)
 Author: Daniel Adler <dadler@uni-goettingen.de>, Duncan Murdoch <murdoch@stats.uwo.ca>
 Maintainer: Duncan Murdoch <murdoch@stats.uwo.ca>
